--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="lib" path="Jar/selenium-server-standalone-3.12.0.jar"/>
 	<classpathentry kind="lib" path="Jar/testng-6.7.jar"/>
 	<classpathentry kind="lib" path="Jar/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="Jar/testng-6.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
